# backend/api/swagger/openapi.json
@@ -2706,10 +2706,10 @@
                   "action": {
                     "type": "string",
                     "enum": [
-                      "accept",
-                      "reject"
+                      "accepted",
+                      "rejected"
                     ],
-                    "example": "accept"
+                    "example": "accepted"
                   },
                   "eta": {
                     "type": "integer",
